--- a/User_interface/src/main/java/lk/ijse/index.html
+++ b/User_interface/src/main/java/lk/ijse/index.html
@@ -66,10 +66,10 @@
                 <a href="view/item.html" class="btn btn-custom w-100 p-3">Manage Items</a>
             </div>
             <div class="col-6 mb-3">
-                <a href="order.html" class="btn btn-custom w-100 p-3">New Order</a>
+                <a href="view/order.html" class="btn btn-custom w-100 p-3">New Order</a>
             </div>
             <div class="col-6 mb-3">
-                <a href="order-history.html" class="btn btn-custom w-100 p-3">Order History</a>
+                <a href="view/orderHistory.html" class="btn btn-custom w-100 p-3">Order History</a>
             </div>
         </div>
     </div>
