--- a/User_interface/src/main/java/lk/ijse/index.html
+++ b/User_interface/src/main/java/lk/ijse/index.html
@@ -3,89 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POS System - Home</title>
+    <title>Login Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.js"></script>
     <style>
         body {
             background-color: #f8f9fa;
         }
-        .container {
-            max-width: 900px;
-            margin-top: 50px;
-        }
-        .card {
+        .login-container {
+            max-width: 400px;
+            margin: 100px auto;
+            padding: 20px;
+            background: white;
             border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        .logo {
-            width: 120px;
-            height: auto;
-        }
-        .header {
-            text-align: center;
-        }
-        .time-box {
-            font-size: 18px;
-            font-weight: bold;
-            color: #007bff;
-        }
-        .btn-custom {
-            background-color: #007bff;
-            color: white;
-            font-weight: bold;
-        }
-        .btn-custom:hover {
-            background-color: #0056b3;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
-<body onload="updateDateTime()">
+<body>
 
 <div class="container">
-    <div class="card p-4 text-center">
-        <!-- Header Section -->
-        <div class="header">
-            <img src="pos-logo.png" alt="POS Logo" class="logo"> <!-- Replace with actual logo -->
-            <h2 class="mt-3">Welcome to POS System</h2>
-        </div>
-
-        <!-- Date & Time -->
-        <div class="mt-3">
-            <p class="time-box">Date: <span id="currentDate"></span></p>
-            <p class="time-box">Time: <span id="currentTime"></span></p>
-        </div>
-
-        <!-- Navigation Buttons -->
-        <div class="row mt-4">
-            <div class="col-6 mb-3">
-                <a href="view/customer.html" class="btn btn-custom w-100 p-3">Manage Customers</a>
+    <div class="login-container">
+        <h3 class="text-center">Login</h3>
+        <form>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email">
             </div>
-            <div class="col-6 mb-3">
-                <a href="view/item.html" class="btn btn-custom w-100 p-3">Manage Items</a>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Enter password">
             </div>
-            <div class="col-6 mb-3">
-                <a href="view/order.html" class="btn btn-custom w-100 p-3">New Order</a>
-            </div>
-            <div class="col-6 mb-3">
-                <a href="view/orderHistory.html" class="btn btn-custom w-100 p-3">Order History</a>
-            </div>
+            <button type="submit" class="btn btn-primary w-100" id="loginButton">Login</button>
+        </form>
+        <div class="text-center mt-3">
+            <p>Do not have an account? <a href="view/register.html">Register here</a></p>
         </div>
     </div>
 </div>
 
+<script src="js/jquery.js"></script>
 <script>
-    function updateDateTime() {
-        let now = new Date();
-        let date = now.toLocaleDateString();
-        let time = now.toLocaleTimeString();
+    document.getElementById("loginButton").addEventListener("click", function (event) {
+        event.preventDefault();
 
-        document.getElementById("currentDate").textContent = date;
-        document.getElementById("currentTime").textContent = time;
+        let email = document.getElementById("email").value;
+        let password = document.getElementById("password").value;
 
-        setTimeout(updateDateTime, 1000); // Update time every second
-    }
+        if (email === "" || password === "") {
+            alert("Please enter both email and password.");
+            return;
+        }
+
+        // Create the user object to send to the backend
+        let user = {
+            email: email,
+            password: password
+        };
+
+        // Send the user data to the backend for authentication
+        fetch("http://localhost:8080/api/v1/auth/authenticate", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify(user)
+        })
+            .then(response => response.json())
+            .then(data => {
+                if (data.code === 201) {
+                    // Store the token in localStorage or sessionStorage
+                    localStorage.setItem("authToken", data.data.token);
+                    // Redirect to the dashboard
+                    window.location.href = "view/dashboard.html";  // Modify this path accordingly
+                } else {
+                    alert(data.message);
+                }
+            })
+            .catch(error => {
+                console.error("Error during login:", error);
+                alert("Login failed. Please try again.");
+            });
+    });
+
 </script>
 
 </body>
