--- a/User_interface/src/main/java/lk/ijse/index.html
+++ b/User_interface/src/main/java/lk/ijse/index.html
@@ -42,49 +42,59 @@
 </div>
 
 <script src="js/jquery.js"></script>
+
 <script>
     document.getElementById("loginButton").addEventListener("click", function (event) {
         event.preventDefault();
 
-        let email = document.getElementById("email").value;
-        let password = document.getElementById("password").value;
+        let email = document.getElementById("email").value.trim();
+        let password = document.getElementById("password").value.trim();
 
-        if (email === "" || password === "") {
+        if (!email || !password) {
             alert("Please enter both email and password.");
             return;
         }
 
-        // Create the user object to send to the backend
-        let user = {
-            email: email,
-            password: password
-        };
+        let user = { email, password };
 
-        // Send the user data to the backend for authentication
         fetch("http://localhost:8080/api/v1/auth/authenticate", {
             method: "POST",
-            headers: {
-                "Content-Type": "application/json"
-            },
+            headers: { "Content-Type": "application/json" },
             body: JSON.stringify(user)
         })
             .then(response => response.json())
             .then(data => {
-                if (data.code === 201) {
-                    // Store the token in localStorage or sessionStorage
+                if (data.code === 201 && data.data.token) {
                     localStorage.setItem("authToken", data.data.token);
-                    // Redirect to the dashboard
-                    window.location.href = "view/dashboard.html";  // Modify this path accordingly
+
+                    // Fetch user role and redirect accordingly
+                    fetch("http://localhost:8080/api/v1/admin/checkRole", {
+                        method: "GET",
+                        headers: { "Authorization": `Bearer ${data.data.token}` }
+                    })
+                        .then(response => response.json())
+                        .then(roleData => {
+                            if (roleData.role === "ADMIN") {
+                                window.location.href = "dashboard.html";
+                            } else if (roleData.role === "USER") {
+                                window.location.href = "view/dashboard.html";
+                            } else {
+                                alert("User role not recognized.");
+                            }
+                        })
+                        .catch(error => {
+                            console.error("Error fetching role:", error);
+                            alert("Failed to determine user role.");
+                        });
                 } else {
-                    alert(data.message);
+                    alert(data.message || "Login failed.");
                 }
             })
             .catch(error => {
-                console.error("Error during login:", error);
+                console.error("Login error:", error);
                 alert("Login failed. Please try again.");
             });
     });
-
 </script>
 
 </body>
