user authenticate done

--- a/User_interface/src/main/java/lk/ijse/index.html
+++ b/User_interface/src/main/java/lk/ijse/index.html
@@ -70,12 +70,12 @@
                     // Fetch user role and redirect accordingly
                     fetch("http://localhost:8080/api/v1/admin/checkRole", {
                         method: "GET",
-                        headers: { "Authorization": `Bearer ${data.data.token}` }
+                        headers: { "Authorization": `Bearer ${response.data.token}` }
                     })
                         .then(response => response.json())
                         .then(roleData => {
                             if (roleData.role === "ADMIN") {
-                                 window.location.href = "dashboard.html";
+                                 window.location.href = "view/dashboard.html";
                             } else if (roleData.role === "USER") {
                                  window.location.href = "view/dashboard.html";
                             } else {
