--- a/User_interface/src/main/java/lk/ijse/js/customer.html
+++ b/User_interface/src/main/java/lk/ijse/js/customer.html
@@ -65,14 +65,164 @@
     </div>
 </div>
 
-<script src="../js/jquery.js"></script>
+<script src="jquery.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+<!--<script>-->
+<!--    let authToken = localStorage.getItem("authToken");-->
+<!--    console.log(authToken)-->
+
+<!--    $(document).ready(function() {-->
+<!--        getAll();-->
+<!--    });-->
+
+<!--    const getAll = () => {-->
+<!--        let tableBody = $('#customerTableBody');-->
+<!--        $.ajax({-->
+<!--            url: "http://localhost:8080/api/v1/customer/getAll",-->
+<!--            method: "GET",-->
+<!--            dataType: "json",-->
+<!--            headers:{"Authorization": `Bearer ${authToken}`},-->
+<!--            success: (resp) => {-->
+<!--                console.log("API Response:", resp);-->
+
+<!--                tableBody.empty();-->
+
+<!--                let customers = Array.isArray(resp) ? resp : resp.data;-->
+<!--                if (!Array.isArray(customers)) {-->
+<!--                    console.error("Invalid response format", resp);-->
+<!--                    alert("Unexpected data format received from the server!");-->
+<!--                    return;-->
+<!--                }-->
+
+<!--                customers.forEach(item => {-->
+<!--                    tableBody.append(`-->
+<!--                        <tr>-->
+<!--                            <td>${item.id}</td>-->
+<!--                            <td>${item.name}</td>-->
+<!--                            <td>${item.address}</td>-->
+<!--                            <td>${item.phone}</td>-->
+<!--                            <td>${item.email}</td>-->
+<!--                            <td>${item.date}</td>-->
+<!--                        </tr>-->
+<!--                    `);-->
+<!--                });-->
+<!--            },-->
+<!--            error: (xhr, status, error) => {-->
+<!--                console.error("Error fetching customers:", status, error, xhr.responseText);-->
+<!--                alert("Error loading customer data!");-->
+<!--            }-->
+<!--        });-->
+<!--    };-->
+
+<!--    function saveCustomer() {-->
+<!--        let id = $('#customerId').val().trim();-->
+<!--        let name = $('#name').val().trim();-->
+<!--        let address = $('#address').val().trim();-->
+<!--        let email = $('#email').val().trim();-->
+<!--        let phone = $('#phone').val().trim();-->
+<!--        let date = $('#date').val().trim();-->
+
+<!--        if (!id || !name || !address || !email || !phone || !date) {-->
+<!--            alert("All fields are required!");-->
+<!--            return;-->
+<!--        }-->
+
+<!--        let customer = { id, name, address, email, phone, date };-->
+
+<!--        $.ajax({-->
+<!--            url: "http://localhost:8080/api/v1/customer/save",-->
+<!--            method: "POST",-->
+<!--            contentType: "application/json",-->
+<!--            data: JSON.stringify(customer),-->
+<!--            success: function () {-->
+<!--                alert("Customer Saved Successfully!");-->
+<!--                getAll();-->
+<!--            },-->
+<!--            error: function (xhr, status, error) {-->
+<!--                console.error("Save error:", status, error, xhr.responseText);-->
+<!--                alert("Error saving customer!");-->
+<!--            }-->
+<!--        });-->
+<!--    }-->
+
+<!--    function updateCustomer() {-->
+<!--        let id = $('#customerId').val().trim();-->
+<!--        let name = $('#name').val().trim();-->
+<!--        let address = $('#address').val().trim();-->
+<!--        let email = $('#email').val().trim();-->
+<!--        let phone = $('#phone').val().trim();-->
+<!--        let date = $('#date').val().trim();-->
+
+<!--        if (!id) {-->
+<!--            alert("Customer ID is required to update!");-->
+<!--            return;-->
+<!--        }-->
+
+<!--        let customer = { id, name, address, email, phone, date };-->
+
+<!--        $.ajax({-->
+<!--            url: `http://localhost:8080/api/v1/customer/update`,-->
+<!--            method: "PUT",-->
+<!--            contentType: "application/json",-->
+<!--            data: JSON.stringify(customer),-->
+<!--            success: function () {-->
+<!--                alert("Customer Updated Successfully!");-->
+<!--                getAll();-->
+<!--            },-->
+<!--            error: function (xhr, status, error) {-->
+<!--                console.error("Update error:", status, error, xhr.responseText);-->
+<!--                alert("Error updating customer!");-->
+<!--            }-->
+<!--        });-->
+<!--    }-->
+
+<!--    function deleteCustomer() {-->
+<!--        let id = $('#customerId').val().trim();-->
+
+<!--        if (!id) {-->
+<!--            alert("Customer ID is required to delete!");-->
+<!--            return;-->
+<!--        }-->
+
+<!--        $.ajax({-->
+<!--            url: `http://localhost:8080/api/v1/customer/delete/${id}`,-->
+<!--            method: "DELETE",-->
+<!--            success: function () {-->
+<!--                alert("Customer Deleted Successfully!");-->
+<!--                getAll();-->
+<!--                clearFields();-->
+<!--            },-->
+<!--            error: function (xhr, status, error) {-->
+<!--                console.error("Delete error:", status, error, xhr.responseText);-->
+<!--                alert("Error deleting customer!");-->
+<!--            }-->
+<!--        });-->
+<!--    }-->
+
+<!--    function clearFields() {-->
+<!--        $('#customerId, #name, #address, #phone, #email, #date').val('');-->
+<!--    }-->
+
+<!--    function goBack() {-->
+<!--        window.location.href = '../index.html';-->
+<!--    }-->
+
+<!--    $(document).ready(function () {-->
+<!--        $('#customerTableBody').on('click', 'tr', function () {-->
+<!--            let row = $(this).find('td');-->
+<!--            $('#customerId').val(row.eq(0).text());-->
+<!--            $('#name').val(row.eq(1).text());-->
+<!--            $('#address').val(row.eq(2).text());-->
+<!--            $('#phone').val(row.eq(3).text());-->
+<!--            $('#email').val(row.eq(4).text());-->
+<!--            $('#date').val(row.eq(5).text());-->
+<!--        });-->
+<!--    });-->
+<!--</script>-->
 <script>
     // Retrieve token from local storage
-    let authToken = localStorage.getItem("authToken");
-
-    // Check if token exists
+   let authToken =localStorage.getItem("authToken");
     if (!authToken) {
         alert("Unauthorized access! Please login.");
         window.location.href = "../index.html";
@@ -157,7 +307,7 @@
         }
 
         let customer = {
-            id: id,
+            id,
             name: $('#name').val().trim(),
             address: $('#address').val().trim(),
             phone: $('#phone').val().trim(),
@@ -166,7 +316,7 @@
         };
 
         $.ajax({
-            url: `http://localhost:8080/api/v1/customer/update`,
+            url: "http://localhost:8080/api/v1/customer/update",
             method: "PUT",
             headers: { "Authorization": `Bearer ${authToken}` },
             contentType: "application/json",
@@ -185,7 +335,6 @@
 
     function deleteCustomer() {
         let id = $('#customerId').val().trim();
-
         if (!id) {
             alert("Customer ID is required to delete!");
             return;
@@ -215,5 +364,6 @@
         window.location.href = '../index.html';
     }
 </script>
+
 </body>
 </html>
